kube/front-end-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
spec:
  type: ClusterIP
  selector:
    app: front-end
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
