kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cv-adapter-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: back-end-service
                port:
                    number: 80

          - path: /
            pathType: Prefix
            backend:
              service:
                name: front-end-service
                port:
                  number: 80
